--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   ],
   "activationCommands": {
     "atom-workspace": [
-      "selection:edit-in-new-tab"
+      "selection:edit-in-new-tab",
+      "selection:move-to-new-tab"
     ]
   },
   "repository": {
