--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "edit-in-new-tab",
-  "description": "Opens the current selection in a new tab",
+  "description": "Opens the current selection in a new tab, optionally writes back the changes to the origin",
   "version": "0.7.0",
   "license": "MIT",
   "author": {
