bundle with webpack

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
+# Package Managers
 bower_components/
 node_modules/
 npm-debug.log*
-todo.md
+shrinkwrap.yaml
 vendor/
+yarn-error.log
+
+# Development Files
+*.d.ts
+*.map
+
+# Project-specific
+todo.md
