--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "description": "Opens the current selection in a new tab, optionally writes back the changes to the origin",
   "version": "0.10.1",
   "license": "MIT",
+  "scripts": {
+    "build": "webpack --mode production",
+    "dev": "webpack --mode none --watch",
+    "lint": "gulp lint",
+    "test": "npm run lint"
+  },
   "author": {
     "name": "Jan T. Sott",
     "url": "http://github.com/idleberg"
@@ -15,7 +21,6 @@
   "activationCommands": {
     "atom-workspace": [
       "edit-in-new-tab:copy-selection",
-      "edit-in-new-tab:move-selection",
       "edit-in-new-tab:settings"
     ]
   },
@@ -28,14 +33,20 @@
     "atom": ">=1.0.0 <2.0.0"
   },
   "devDependencies": {
+    "coffee-loader": "^0.9.0",
     "coffeelint-stylish": "^0.1.2",
-    "gulp": "^4.0.0",
+    "coffeescript": "^2.4.1",
+    "gulp": "^4.0.2",
     "gulp-coffeelint": "^0.6.0",
-    "gulp-debug": "^3.1.0",
-    "gulp-jsonlint": "^1.2.0",
-    "husky": "^0.14.3"
+    "gulp-debug": "^4.0.0",
+    "gulp-jsonlint": "^1.3.0",
+    "husky": "^3.0.1",
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.5"
   },
-  "scripts": {
-    "test": "gulp lint"
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run test"
+    }
   }
 }
