--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/idleberg/atom-edit-in-new-tab.git"
+    "url": "https://github.com/idleberg/atom-edit-in-new-tab.git"
   },
   "main": "./lib/edit-in-new-tab",
   "engines": {
